feat(auth): add forgot and reset password endpoints with tests
feat(analytics): enhance analytics controller tests for various user roles

feat(audit): implement audit aspect tests for logging success and failure

fix(link): improve link expiry notification logic and add tests for scheduler

feat(geoip): enhance GeoIpService to load database from classpath if not found

test(notification): add tests for notification consumer and service methods

test(link): add tests for link service to handle ownership and creation scenarios

test(audit): add tests for audit log service with security context integration

test(notification): implement tests for notification report generation

test(analytics): add tests for analytics service to cover edge cases and ownership checks