@@ -2,20 +2,19 @@ package com.urlshortener.controller;
 
 import com.urlshortener.security.UserDetailsImpl;
 import com.urlshortener.service.AnalyticsService;
-import com.urlshortener.security.JwtTokenProvider;
-import com.urlshortener.security.UserDetailsServiceImpl;
-import com.urlshortener.security.AuthEntryPointJwt;
+import com.urlshortener.entity.Plan;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.http.MediaType;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Collections;
-import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 import static org.mockito.ArgumentMatchers.*;
@@ -33,75 +32,98 @@ class AnalyticsControllerTest {
     @MockBean
     private AnalyticsService analyticsService;
 
-    @MockBean
-    private JwtTokenProvider jwtTokenProvider;
-
-    @MockBean
-    private UserDetailsServiceImpl userDetailsService;
-
-    @MockBean
-    private AuthEntryPointJwt authEntryPointJwt;
-
-    private UserDetailsImpl userDetails;
+    private UserDetailsImpl proUserDetails;
+    private UserDetailsImpl freeUserDetails;
+    private UserDetailsImpl adminUserDetails;
 
     @BeforeEach
     void setUp() {
-        userDetails = new UserDetailsImpl(
-                1L,
-                "Test User",
-                "test@example.com",
-                "password",
-                1,
-                0,
-                "PRO",
-                Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER"))
+        proUserDetails = new UserDetailsImpl(
+                1L, "pro", "pro@example.com", "pass", 1, 0, Plan.PRO.name(),
+                List.of(new org.springframework.security.core.authority.SimpleGrantedAuthority("ROLE_USER"))
+        );
+
+        freeUserDetails = new UserDetailsImpl(
+                2L, "free", "free@example.com", "pass", 1, 0, Plan.FREE.name(),
+                List.of(new org.springframework.security.core.authority.SimpleGrantedAuthority("ROLE_USER"))
+        );
+
+        adminUserDetails = new UserDetailsImpl(
+                3L, "admin", "admin@example.com", "pass", 1, 0, Plan.PRO.name(),
+                List.of(new org.springframework.security.core.authority.SimpleGrantedAuthority("ROLE_ADMIN"))
         );
     }
 
     @Test
     void getOverallAnalytics_ReturnsOk() throws Exception {
-        Map<String, Object> stats = new HashMap<>();
-        stats.put("totalClicks", 100L);
-        when(analyticsService.getOverallAnalytics(anyLong(), anyLong(), anyBoolean())).thenReturn(stats);
+        when(analyticsService.getOverallAnalytics(anyLong(), anyLong(), anyBoolean()))
+                .thenReturn(Map.of("totalClicks", 10L));
 
-        mockMvc.perform(get("/api/analytics/link/10/overall")
-                        .with(user(userDetails)))
+        mockMvc.perform(get("/api/analytics/link/1/overall")
+                .with(user(proUserDetails)))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.totalClicks").value(100));
-    }
-
-    @Test
-    void getGeoAnalytics_ReturnsOk() throws Exception {
-        Map<String, Long> geo = new HashMap<>();
-        geo.put("India", 50L);
-        when(analyticsService.getGeoAnalytics(anyLong(), anyLong(), anyBoolean())).thenReturn(geo);
-
-        mockMvc.perform(get("/api/analytics/link/10/geo")
-                        .with(user(userDetails)))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.India").value(50));
+                .andExpect(jsonPath("$.totalClicks").value(10));
     }
 
     @Test
     void getDashboardStats_ReturnsOk() throws Exception {
-        Map<String, Object> stats = new HashMap<>();
-        stats.put("totalLinks", 5);
-        when(analyticsService.getDashboardStats(anyLong(), anyBoolean())).thenReturn(stats);
+        when(analyticsService.getDashboardStats(anyLong(), anyBoolean()))
+                .thenReturn(Map.of("totalLinks", 5));
 
         mockMvc.perform(get("/api/analytics/stats")
-                        .with(user(userDetails)))
+                .with(user(proUserDetails)))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.totalLinks").value(5));
     }
 
     @Test
-    void exportLinkAnalytics_ReturnsPdf() throws Exception {
-        byte[] pdfContent = new byte[]{1, 2, 3};
-        when(analyticsService.exportLinkAnalytics(anyLong(), anyLong(), anyBoolean())).thenReturn(pdfContent);
+    void exportLinkAnalytics_ProUser_ReturnsPdf() throws Exception {
+        byte[] pdf = "PDF CONTENT".getBytes();
+        when(analyticsService.exportLinkAnalytics(anyLong(), anyLong(), anyBoolean())).thenReturn(pdf);
 
-        mockMvc.perform(get("/api/analytics/link/10/export")
-                        .with(user(userDetails)))
+        mockMvc.perform(get("/api/analytics/link/1/export")
+                .with(user(proUserDetails)))
+                .andExpect(status().isOk())
+                .andExpect(content().contentType(MediaType.APPLICATION_PDF))
+                .andExpect(header().string("Content-Disposition", "attachment; filename=link_analytics_1.pdf"));
+    }
+
+    @Test
+    void exportLinkAnalytics_FreeUser_ReturnsForbidden() throws Exception {
+        mockMvc.perform(get("/api/analytics/link/1/export")
+                .with(user(freeUserDetails)))
+                .andExpect(status().isForbidden());
+    }
+
+    @Test
+    void exportAllAnalytics_Admin_ReturnsPdf() throws Exception {
+        byte[] pdf = "ALL PDF".getBytes();
+        when(analyticsService.exportAllAnalytics()).thenReturn(pdf);
+
+        mockMvc.perform(get("/api/analytics/admin/export/all")
+                .with(user(adminUserDetails)))
                 .andExpect(status().isOk())
                 .andExpect(content().contentType(MediaType.APPLICATION_PDF));
+    }
+
+    @Test
+    void getLatestEvents_Admin_ReturnsOk() throws Exception {
+        when(analyticsService.getLatestClickEvents(anyString(), any()))
+                .thenReturn(new PageImpl<>(List.of()));
+
+        mockMvc.perform(get("/api/analytics/admin/latest")
+                .param("query", "test")
+                .with(user(adminUserDetails)))
+                .andExpect(status().isOk());
+    }
+
+    @Test
+    void getLinkEvents_ReturnsOk() throws Exception {
+        when(analyticsService.getLinkEvents(anyLong(), anyLong(), anyBoolean(), anyString(), any()))
+                .thenReturn(new PageImpl<>(List.of()));
+
+        mockMvc.perform(get("/api/analytics/link/1/events")
+                .with(user(proUserDetails)))
+                .andExpect(status().isOk());
     }
 }
